; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/sendmail/libsmdb/extr_smdb.c_smdb_malloc_database.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/sendmail/libsmdb/extr_smdb.c_smdb_malloc_database.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @smdb_malloc_database() #0 {
  %1 = alloca i32*, align 8
  %2 = call i64 @malloc(i32 4)
  %3 = inttoptr i64 %2 to i32*
  store i32* %3, i32** %1, align 8
  %4 = load i32*, i32** %1, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @memset(i32* %7, i8 signext 0, i32 4)
  br label %9

9:                                                ; preds = %6, %0
  %10 = load i32*, i32** %1, align 8
  ret i32* %10
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @memset(i32*, i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
